--- a/aula3_tarefa/index.html
+++ b/aula3_tarefa/index.html
@@ -37,9 +37,7 @@
         <input type="text" id="Complemento" name="Complemento"><br>
 
         <input list="Cidades" name="Cidades"><br>
-        <datalist id="Cidades"
-        
-        </form>
+        <datalist id="Cidades"> </form>
 
 
 
