--- a/aula3_tarefa/index.html
+++ b/aula3_tarefa/index.html
@@ -116,6 +116,8 @@
                 <input type="checkbox" id="Banco de Dados" name="cursos" value="Banco de Dados"> Banco de Dados
             </label><br>
 
+            <input type="submit" value="Enviar">
+
         </form>
 
         <hr>
