--- a/aula4_tarefa/projetos.html
+++ b/aula4_tarefa/projetos.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pessoal</title>
+    <link rel="stylesheet" href="style.css"> <!-- Vincule o arquivo CSS aqui -->
 </head>
 
 <body>
