--- a/aula4_tarefa/hobbies.html
+++ b/aula4_tarefa/hobbies.html
@@ -17,9 +17,9 @@
     <p>assisto bastente youtube, sendo a maior forma de entreterimento hoje em dia para mim</p>
 
     <ol>
-        <li><a href="http://127.0.0.1:5500/projetos_pessoais.html">projetos</a></li>
-        <li><a href="http://127.0.0.1:5500/contato.html">Contato</a></li>
-        <li><a href="http://127.0.0.1:5500/tarefa/informa%C3%A7%C3%B5es.html">, informações básicas</a></li>
+        <li><a href="projetos.html">projetos</a></li>
+        <li><a href="contato.html">Contato</a></li>
+        <li><a href="sobre_eu.html">, informações básicas</a></li>
     </ol>
 
 </body>
