--- a/aula4_tarefa/sobre_eu.html
+++ b/aula4_tarefa/sobre_eu.html
@@ -17,9 +17,9 @@
     <p>idade: 18 anos</p>
     <p>Faço engenharia da computação na Facens</p>
     <ol>
-        <li><a href="http://127.0.0.1:5500/projetos_pessoais.html">projetos</a></li>
-        <li><a href="http://127.0.0.1:5500/hobbies.html">Coisas que eu gosto de fazer</a></li>
-        <li><a href="http://127.0.0.1:5500/contato.html">Contatos</a></li>
+        <li><a href="projetos.html">projetos</a></li>
+        <li><a href="hobbies.html">Coisas que eu gosto de fazer</a></li>
+        <li><a href="contato.html">Contatos</a></li>
     </ol>
 </body>
 
