--- a/aula4_tarefa/contato.html
+++ b/aula4_tarefa/contato.html
@@ -15,9 +15,9 @@
     <p>murilo.quev@gmail.com</p>
 
     <ol>
-        <li><a href="http://127.0.0.1:5500/projetos_pessoais.html">projetos</a></li>
-        <li><a href="http://127.0.0.1:5500/hobbies.html">Coisas que eu gosto de fazer</a></li>
-        <li><a href="http://127.0.0.1:5500/tarefa/informa%C3%A7%C3%B5es.html">, informações básicas</a></li>
+        <li><a href="projetos.html">projetos</a></li>
+        <li><a href="hobbies.html">Coisas que eu gosto de fazer</a></li>
+        <li><a href="sobre_eu.html">, informações básicas</a></li>
     </ol>
 </body>
 
