--- a/aula4_tarefa/projetos.html
+++ b/aula4_tarefa/projetos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pessoal</title>
-    
+    <link rel="stylesheet" href="style.css"> <!-- Vincule o arquivo CSS aqui -->
 </head>
 
 <body>
@@ -17,11 +17,13 @@
     <p>Meu primeiro projeto de upx foi uma licheira inteligente, que mostrava a quantidade de lixo e possuía um app.</p>
     <p>Faço parte do MAIA (Mobilidade Aplicada a Inteligência Artificial), onde, dentro da equipe, estou na EletroQuad.
         Que é a equipe competitiva do MAIA em que trabalhamos no desenvolvimento de um drone</p>
-    <ol>
-        <li><a href="sobre_eu.html">Para saber o básico sobre mim</a></li>
-        <li><a href="hobbies.html">Coisas que eu gosto de fazer</a></li>
-        <li><a href="contato.html">, Contatos</a></li>
-    </ol>
+        <div class="link-container">
+            <ol class="centered-list">
+                <li><a href="sobre_eu.html" class="link">Para saber o básico sobre mim</a></li>
+                <li><a href="hobbies.html" class="link">Coisas que eu gosto de fazer</a></li>
+                <li><a href="contato.html" class="link">Contatos</a></li>
+            </ol>
+        </div>
 
 </body>
 
