--- a/aula4_tarefa/projetos.html
+++ b/aula4_tarefa/projetos.html
@@ -18,13 +18,12 @@
     <p>Faço parte do MAIA (Mobilidade Aplicada a Inteligência Artificial), onde, dentro da equipe, estou na EletroQuad.
         Que é a equipe competitiva do MAIA em que trabalhamos no desenvolvimento de um drone</p>
         <div class="link-container">
-            <ol class="centered-list">
-                <li><a href="sobre_eu.html" class="link">Para saber o básico sobre mim</a></li>
-                <li><a href="hobbies.html" class="link">Coisas que eu gosto de fazer</a></li>
-                <li><a href="contato.html" class="link">Contatos</a></li>
-            </ol>
+            <menu class="menu-opcoes">
+                <li><a href="contato.html">Contato</a></li>
+                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="sobre_eu.html">Informações Básicas</a></li>
+            </menu>
         </div>
-
 </body>
 
 </html>
