--- a/aula4_tarefa/sobre_eu.html
+++ b/aula4_tarefa/sobre_eu.html
@@ -12,15 +12,15 @@
 <body>
     <hr>
     <h1>Sobre mim</h1>
-    <img src="imagem.jpeg" alt="eu e minha namorada" width="200px">
+    <img src="Captura de tela 2024-09-11 141432.png" alt="eu e minha namorada" width="200px">
     <p>Nome: Murilo Prestes de Quevedo</p>
     <p>idade: 18 anos</p>
     <p>Faço engenharia da computação na Facens</p>
-    <ol>
-        <li><a href="projetos.html">projetos</a></li>
-        <li><a href="hobbies.html">Coisas que eu gosto de fazer</a></li>
-        <li><a href="contato.html">Contatos</a></li>
-    </ol>
+    <menu class="menu-opcoes">
+        <li><a href="projetos.html">Projetos</a></li>
+        <li><a href="hobbies.html">Hobbies</a></li>
+        <li><a href="contato.html">contato</a></li>
+    </menu>
 </body>
 
 </html>
