--- a/aula4_tarefa/contato.html
+++ b/aula4_tarefa/contato.html
@@ -14,11 +14,16 @@
     <p>15997166920, meu número.</p>
     <p>murilo.quev@gmail.com</p>
 
-    <ol>
-        <li><a href="projetos.html">projetos</a></li>
-        <li><a href="hobbies.html">Coisas que eu gosto de fazer</a></li>
-        <li><a href="sobre_eu.html">, informações básicas</a></li>
-    </ol>
+    <menu class="menu-opcoes">
+        <li><a href="projetos.html">Projetos</a></li>
+        <li><a href="hobbies.html">Hobbies</a></li>
+        <li><a href="sobre_eu.html">Informações Básicas</a></li>
+    </menu>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/FH2P1PU6teM?si=7cy_Fo_1SAXmhWtJ""
+    title="YouTube video player 2" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen></iframe>
 </body>
 
 </html>
