--- a/aula4_tarefa/hobbies.html
+++ b/aula4_tarefa/hobbies.html
@@ -16,11 +16,11 @@
     <p>Sempre tento andar uns 30 min de bike todo dia</p>
     <p>assisto bastente youtube, sendo a maior forma de entreterimento hoje em dia para mim</p>
 
-    <ol>
-        <li><a href="projetos.html">projetos</a></li>
+    <menu class="menu-opcoes">
+        <li><a href="projetos.html">Projetos</a></li>
         <li><a href="contato.html">Contato</a></li>
-        <li><a href="sobre_eu.html">, informações básicas</a></li>
-    </ol>
+        <li><a href="sobre_eu.html">Informações Básicas</a></li>
+    </menu>
 
 </body>
 
