--- a/aula4_tarefa/projetos.html
+++ b/aula4_tarefa/projetos.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pessoal</title>
-    <link rel="stylesheet" href="style.css"> <!-- Vincule o arquivo CSS aqui -->
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <!-- Vincule o arquivo CSS aqui -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-    <hr>
+  <body>
+    <hr />
     <h1>Projetos pessoais</h1>
-    <p>Desenvolvi um tcc sobre resinas de impressora 3D, onde fizemos análises de diversos tipos de resinas diferenetes.
+    <p>
+      Desenvolvi um tcc sobre resinas de impressora 3D, onde fizemos análises de
+      diversos tipos de resinas diferenetes.
     </p>
-    <p>Meu primeiro projeto de upx foi uma licheira inteligente, que mostrava a quantidade de lixo e possuía um app.</p>
-    <p>Faço parte do MAIA (Mobilidade Aplicada a Inteligência Artificial), onde, dentro da equipe, estou na EletroQuad.
-        Que é a equipe competitiva do MAIA em que trabalhamos no desenvolvimento de um drone</p>
-        <div class="link-container">
-            <menu class="menu-opcoes">
-                <li><a href="contato.html">Contato</a></li>
-                <li><a href="hobbies.html">Hobbies</a></li>
-                <li><a href="sobre_eu.html">Informações Básicas</a></li>
-            </menu>
-        </div>
-</body>
-
+    <p>
+      Meu primeiro projeto de upx foi uma licheira inteligente, que mostrava a
+      quantidade de lixo e possuía um app.
+    </p>
+    <p>
+      Faço parte do MAIA (Mobilidade Aplicada a Inteligência Artificial), onde,
+      dentro da equipe, estou na EletroQuad. Que é a equipe competitiva do MAIA
+      em que trabalhamos no desenvolvimento de um drone
+    </p>
+    <div class="link-container">
+      <menu class="menu-opcoes">
+        <li><a href="contato.html">Contato</a></li>
+        <li><a href="hobbies.html">Hobbies</a></li>
+        <li><a href="sobre_eu.html">Informações Básicas</a></li>
+      </menu>
+    </div>
+  </body>
 </html>
