--- a/aula4_tarefa/sobre_eu.html
+++ b/aula4_tarefa/sobre_eu.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Informações Básicas</title>
-    <link rel="stylesheet" href="style.css"> <!-- Vincule o arquivo CSS aqui -->
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <!-- Vincule o arquivo CSS aqui -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-    <hr>
+  <body>
+    <hr />
     <h1>Sobre mim</h1>
-    <img src="Captura de tela 2024-09-11 141432.png" alt="eu e minha namorada" width="200px">
+    <img
+      src="Captura de tela 2024-09-11 141432.png"
+      alt="eu e minha namorada"
+      width="200px"
+    />
     <p>Nome: Murilo Prestes de Quevedo</p>
     <p>idade: 18 anos</p>
     <p>Faço engenharia da computação na Facens</p>
     <menu class="menu-opcoes">
-        <li><a href="projetos.html">Projetos</a></li>
-        <li><a href="hobbies.html">Hobbies</a></li>
-        <li><a href="contato.html">contato</a></li>
+      <li><a href="projetos.html">Projetos</a></li>
+      <li><a href="hobbies.html">Hobbies</a></li>
+      <li><a href="contato.html">contato</a></li>
     </menu>
-</body>
-
+  </body>
 </html>
