--- a/aula4_tarefa/hobbies.html
+++ b/aula4_tarefa/hobbies.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hobbies</title>
-    <link rel="stylesheet" href="style.css"> <!-- Vincule o arquivo CSS aqui -->
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <!-- Vincule o arquivo CSS aqui -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <h1>Coisas que gosto de fazer</h1>
     <p>Faço academia toda semana, para relaxar</p>
     <p>Jogo diversos jogos de videogame no meu pc, e também jogos físicos</p>
     <p>Sempre tento andar uns 30 min de bike todo dia</p>
-    <p>assisto bastente youtube, sendo a maior forma de entreterimento hoje em dia para mim</p>
+    <p>
+      assisto bastente youtube, sendo a maior forma de entreterimento hoje em
+      dia para mim
+    </p>
 
     <menu class="menu-opcoes">
-        <li><a href="projetos.html">Projetos</a></li>
-        <li><a href="contato.html">Contato</a></li>
-        <li><a href="sobre_eu.html">Informações Básicas</a></li>
+      <li><a href="projetos.html">Projetos</a></li>
+      <li><a href="contato.html">Contato</a></li>
+      <li><a href="sobre_eu.html">Informações Básicas</a></li>
     </menu>
-
-</body>
-
+  </body>
 </html>
