--- a/aula5_ex/index.html
+++ b/aula5_ex/index.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercícios Flexbox Froggy</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <ul>
-        <li><a href="Exercicios/ex01.html">Ex01</a></li>
-        <li><a href="Exercicios/ex02.html">Ex02</a></li>
-        <li><a href="Exercicios/ex03.html">Ex03</a></li>
-        <li><a href="Exercicios/ex04.html">Ex04</a></li>
-        <li><a href="Exercicios/ex05.html">Ex05</a></li>
-        <li><a href="Exercicios/ex06.html">Ex06</a></li>
-        <li><a href="Exercicios/ex07.html">Ex07</a></li>
-        <li><a href="Exercicios/ex08.html">Ex08</a></li>
-        <li><a href="Exercicios/ex09.html">Ex09</a></li>
-        <li><a href="Exercicios/ex10.html">Ex10</a></li>
-        <li><a href="Exercicios/ex11.html">Ex11</a></li>
-        <li><a href="Exercicios/ex12.html">Ex12</a></li>
-        <li><a href="Exercicios/ex13.html">Ex13</a></li>
-        <li><a href="Exercicios/ex14.html">Ex14</a></li>
-        <li><a href="Exercicios/ex15.html">Ex15</a></li>
-        <li><a href="Exercicios/ex16.html">Ex16</a></li>
-        <li><a href="Exercicios/ex17.html">Ex17</a></li>
-        <li><a href="Exercicios/ex18.html">Ex18</a></li>
-        <li><a href="Exercicios/ex19.html">Ex19</a></li>
-        <li><a href="Exercicios/ex20.html">Ex20</a></li>
-        <li><a href="Exercicios/ex21.html">Ex21</a></li>
-        <li><a href="Exercicios/ex22.html">Ex22</a></li>
-        <li><a href="Exercicios/ex23.html">Ex23</a></li>
-        <li><a href="Exercicios/ex24.html">Ex24</a></li>
-    </ul>
 
+<body class="index">
+
+    <h1>Exercícios Flexbox Froggy</h1>
+
+    <hr>
+
+    <ul>
+        <li><a href="ex1.html">EX001</a></li>
+        <li><a href="ex2.html">EX002</a></li>
+        <li><a href="ex3.html">EX003</a></li>
+        <li><a href="ex4.html">EX004</a></li>
+        <li><a href="ex5.html">EX005</a></li>
+        <li><a href="ex6.html">EX006</a></li>
+        <li><a href="ex7.html">EX007</a></li>
+        <li><a href="ex8.html">EX008</a></li>
+        <li><a href="ex9.html">EX009</a></li>
+        <li><a href="ex10.html">EX010</a></li>
+        <li><a href="ex11.html">EX011</a></li>
+        <li><a href="ex12.html">EX012</a></li>
+        <li><a href="ex13.html">EX013</a></li>
+        <li><a href="ex14.html">EX014</a></li>
+        <li><a href="ex15.html">EX015</a></li>
+        <li><a href="ex16.html">EX016</a></li>
+        <li><a href="ex17.html">EX017</a></li>
+        <li><a href="ex18.html">EX018</a></li>
+        <li><a href="ex19.html">EX019</a></li>
+        <li><a href="ex20.html">EX020</a></li>
+        <li><a href="ex21.html">EX021</a></li>
+        <li><a href="ex22.html">EX022</a></li>
+        <li><a href="ex23.html">EX023</a></li>
+        <li><a href="ex24.html">EX024</a></li>
+
+
+    </ul>
 </body>
+
 </html>
