--- a/aula5_ex/ex21.html
+++ b/aula5_ex/ex21.html
@@ -1,1 +1,44 @@
-2
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EX021</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="ex021">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        <img class="camel" src="imagens/camel.png" alt="Camelo">
+        
+    </div>
+
+    <a href="index.html">Voltar</a>
+
+</body>
+
+</html>
