--- a/aula6/pag01.html
+++ b/aula6/pag01.html
@@ -2,54 +2,46 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- Define o tipo de documento como HTML5 -->
+    <meta charset="UTF-8"> <!-- Define a codificação de caracteres como UTF-8 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsividade -->
+    <!-- Importação das fontes do Google Fonts: Red Rose e Roboto -->
+    <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
+    <!-- Conexão para fontes de novo -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <!-- Importa novamente a fonte Roboto -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
+    <!-- Link para o arquivo de estilo externo "style.css" -->
     <link rel="stylesheet" href="style.css">
+    <!-- Define o título da página -->
     <title>Home</title>
 </head>
 
 <body>
     <main class="conteudo">
+        <!-- Container principal do conteúdo -->
         <div class="texto">
-
+            <!-- Bloco de artigo com título e parágrafo -->
             <article>
                 <h1><b>Design & Build Your Own Landing Pages</b></h1>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo ligula eget dolor. Aenean
-                    massa.
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
-                    felis,
-                    ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim
-                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
             </article>
 
             <article class="botao">
-
+                <!-- Seção dos botões -->
                 <div class="botao1">
-                    <a href="#" class="btn-1">Purchase UI Kit</a>
+                    <a href="#" class="btn-1">Purchase UI Kit</a> <!-- Link estilizado como botão -->
                 </div>
                 <div class="botao2">
-                    <a href="#" class="btn-2">Learn More</a>
+                    <a href="#" class="btn-2">Learn More</a> <!-- Outro link estilizado como botão -->
                 </div>
-
             </article>
-
         </div>
 
         <aside class="imagem">
-            <img src="imagens/image.png" alt="Celular">
+            <!-- Imagem ao lado do conteúdo -->
+            <img src="imagens/image.png" alt="Celular"> <!-- Exibe uma imagem com um texto alternativo "Celular" -->
         </aside>
-
     </main>
 </body>
 
