--- a/aula6/pag01.html
+++ b/aula6/pag01.html
@@ -7,11 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsividade -->
     <!-- Importação das fontes do Google Fonts: Red Rose e Roboto -->
     <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
-    <!-- Conexão para fontes de novo -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Importa novamente a fonte Roboto -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
-    <!-- Link para o arquivo de estilo externo "style.css" -->
     <link rel="stylesheet" href="style.css">
     <!-- Define o título da página -->
     <title>Home</title>
@@ -24,7 +19,11 @@
             <!-- Bloco de artigo com título e parágrafo -->
             <article>
                 <h1><b>Design & Build Your Own Landing Pages</b></h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+                    commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+                    penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+                    Nulla consequat massa quis enim.</p>
             </article>
 
             <article class="botao">
