--- a/prova/index.html
+++ b/prova/index.html
@@ -7,7 +7,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
-    <title>AC1</title>
+    <title>AC1 - Prática</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +17,7 @@
         <section class="donuts">
 
             <img src="imagens/azul.jfif" alt="Donuts">
-            <img class="img-baixo" src="imagens/tres.jfif" alt="Donuts">
+            <img class="img-parte_de_baixo" src="imagens/tres.jfif" alt="Donuts">
 
         </section>
 
@@ -47,7 +47,7 @@
         <section class="donuts">
 
             <img src="imagens/varios.jfif" alt="Donuts">
-            <img class="img-b" src="imagens/centenas.jfif" alt="Donuts">
+            <img class="img-parte_de_baixo" src="imagens/centenas.jfif" alt="Donuts">
 
         </section>
 
