--- a/aula10_calculadora/index.html
+++ b/aula10_calculadora/index.html
@@ -4,37 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <!-- Importa o arquivo CSS para estilizar a calculadora -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Contêiner principal da calculadora -->
     <div class="calculadora">
-        <!-- Título da calculadora -->
-        <h2>Calculadora</h2>
-        <!-- Display onde os números e resultados aparecerão -->
-        <div id="display">0</div>
-        <!-- Div que contém todos os botões da calculadora -->
+        <div id="display">0</div> <!-- Display com id correto -->
+
         <div class="botoes">
-            <!-- Botões de números e operações -->
-            <button class="btn">1</button>
-            <button class="btn">2</button>
-            <button class="btn">3</button>
-            <button class="btn">+</button>
-            <button class="btn">4</button>
-            <button class="btn">5</button>
-            <button class="btn">6</button>
-            <button class="btn">-</button>
-            <button class="btn">7</button>
-            <button class="btn">8</button>
-            <button class="btn">9</button>
-            <button class="btn">*</button>
-            <button class="btn">0</button>
-            <button class="btn">=</button>
-            <button class="btn">/</button>
+            <!-- Números e Operadores -->
+            <button class="btn" onclick="insert('1')">1</button>
+            <button class="btn" onclick="insert('2')">2</button>
+            <button class="btn" onclick="insert('3')">3</button>
+            <button class="btn" onclick="insert('+')">+</button>
+
+            <button class="btn" onclick="insert('4')">4</button>
+            <button class="btn" onclick="insert('5')">5</button>
+            <button class="btn" onclick="insert('6')">6</button>
+            <button class="btn" onclick="insert('-')">-</button>
+
+            <button class="btn" onclick="insert('7')">7</button>
+            <button class="btn" onclick="insert('8')">8</button>
+            <button class="btn" onclick="insert('9')">9</button>
+            <button class="btn" onclick="insert('*')">*</button>
+
+            <button class="btn" onclick="clean()">C</button> <!-- Limpa o display -->
+            <button class="btn" onclick="insert('0')">0</button>
+            <button class="btn" onclick="calcular()">=</button> <!-- Calcula o resultado -->
+            <button class="btn" onclick="insert('/')">/</button>
+
+            <button class="btn" onclick="back()">←</button> <!-- Apaga o último dígito -->
         </div>
     </div>
-    <!-- Importa o arquivo JavaScript para adicionar a funcionalidade da calculadora -->
+
     <script src="script.js"></script>
 </body>
 </html>
