--- a/prova/index.html
+++ b/prova/index.html
@@ -1,58 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>AC1 - Prática</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <main>
+      <section class="donuts">
+        <img src="imagens/azul.jfif" alt="Donuts" />
+        <img class="img-parte_de_baixo" src="imagens/tres.jfif" alt="Donuts" />
+      </section>
 
-        <section class="donuts">
+      <section>
+        <article>
+          <h1>Ready?<br />Snack time!</h1>
 
-            <img src="imagens/azul.jfif" alt="Donuts">
-            <img class="img-parte_de_baixo" src="imagens/tres.jfif" alt="Donuts">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus
+            imperdiet sed id elementum. Quam vel aliquam sit vulputate. Faucibus
+            nec gravida ipsum pulvinar vel non.
+          </p>
+        </article>
 
-        </section>
+        <article class="link">
+          <a href="">Get Started</a>
+        </article>
 
-        <section>
+        <article class="botao">
+          <img src="imagens/botoes/roxo.png" alt="Botao_rosa" />
+          <img src="imagens/botoes/laranja.png" alt="Botão_laranja" />
+          <img src="imagens/botoes/azul.png" alt="Botao_azul" />
+        </article>
+      </section>
 
-            <article>
-
-                <h1>Ready?<br>Snack time!</h1>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum. Quam vel
-                    aliquam sit vulputate. Faucibus nec gravida ipsum pulvinar vel non.</p>
-
-            </article>
-
-            <article class="link">
-                <a href="">Get Started</a>
-            </article>
-
-            <article class="botao">
-                <img src="imagens/botoes/roxo.png" alt="Botao_rosa">
-                <img src="imagens/botoes/laranja.png" alt="Botão_laranja">
-                <img src="imagens/botoes/azul.png" alt="Botao_azul">
-            </article>
-
-        </section>
-
-        <section class="donuts">
-
-            <img src="imagens/varios.jfif" alt="Donuts">
-            <img class="img-parte_de_baixo" src="imagens/centenas.jfif" alt="Donuts">
-
-        </section>
-
+      <section class="donuts">
+        <img src="imagens/varios.jfif" alt="Donuts" />
+        <img
+          class="img-parte_de_baixo"
+          src="imagens/centenas.jfif"
+          alt="Donuts"
+        />
+      </section>
     </main>
-
-</body>
-
+  </body>
 </html>
