--- a/modelo_boot/index.html
+++ b/modelo_boot/index.html
@@ -5,13 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exemplo de Página</title>
-
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="stley.css">
 </head>
 
 <body>
-
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Bootstrap</a>
     <div class="collapse navbar-collapse">
@@ -20,71 +18,38 @@
         <li class="nav-item"><a class="nav-link" href="#">Bio</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
+      <form class="form-inline my-2 my-lg-0 custom-form">
         <input class="form-control mr-sm-2" type="search" placeholder="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
+
     </div>
   </nav>
 
-
   <div class="container my-4">
-    <form class="text-center">
+    <form class="text-center" onsubmit="addCard(event)">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Título">
+        <input type="text" class="form-control" id="titulo" placeholder="Título" required>
       </div>
       <button type="submit" class="btn btn-primary">Cadastrar</button>
     </form>
   </div>
 
-  
   <div class="container">
-    <div class="row">
-      <div class="col-md-3">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="Imagem 1">
-          <div class="card-body text-center">
-            <h5 class="card-title">Card title</h5>
-            <button class="btn btn-danger">Apagar</button>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="Imagem 2">
-          <div class="card-body text-center">
-            <h5 class="card-title">Card title</h5>
-            <button class="btn btn-danger">Apagar</button>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="Imagem 3">
-          <div class="card-body text-center">
-            <h5 class="card-title">Card title</h5>
-            <button class="btn btn-danger">Apagar</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
+    <div class="row" id="card-container"></div>
     <div class="text-center my-4">
-      <button class="btn btn-danger">APAGAR TODOS</button>
+      <button class="btn btn-danger" onclick="removeAllCards()">APAGAR TODOS</button>
     </div>
   </div>
-  
 
-
-  <footer class="bg-dark text-white text-center py-3">
+  <footer class="bg-dark text-white text-center py-3 fixed-bottom">
     <p>Copyright Facens©2024 - Webdesign - Luis e Murilo</p>
   </footer>
 
-  < <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.6/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.6/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
