--- a/ac2/index.html
+++ b/ac2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ac2</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -38,7 +39,7 @@
         </div>
     </div>
 
-    <footer class="bg-dark text-white text-center py-3 fixed-bottom">
+    <footer class="rodape text-white text-center py-3 fixed-bottom">
         <p>Copyright Facens©2024 - Webdesign - Luis e Murilo</p>
     </footer>
 
