--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <footer class="rodape text-white text-center py-3 fixed-bottom">
-        <p>Copyright Facens©2024 - Webdesign - Luis e Murilo</p>
+        <p>Copyright Facens©2024 - Webdesign - Luiz e Murilo</p>
     </footer>
 
     <script src="./ac2/script.js"></script>
